css/contacts.css
/* ... */
#contact input[type="button"]:hover, #contact select:hover, #contact select:focus, #contact select:active, #contact input[type="button"]:focus, #contact .button:hover, button:hover { background-color:#fff; color:#333; }

#contact fieldset, #contact div, #contact span, #contact section {
	-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; 
}
#contact fieldset.editor {
	padding:4px;
	border: 1px solid #1d2d44; 
	-moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; outline:none; 
}
#contact input:invalid, #contact input:hover:not([type="checkbox"]), #contact input:active:not([type="checkbox"]), #contact input:focus:not([type="checkbox"]), #contact input.active, #contact textarea:focus, #contact textarea:hover {
	border: 1px solid silver !important; 
	-moz-border-radius:.3em; -webkit-border-radius:.3em; border-radius:.3em; 
	outline:none; float: left;
}

/* Left content */

#shareWithList .cruds {
	display: inline;
}

#shareWithList li {
	border-bottom: 1px solid silver;
}


#app-navigation > ul > li.group.editing {
	height: 40px;
}
#app-navigation a.unshare {
	float: right;
}

#app-navigation .utils {
    bottom: 0;
    position: absolute;
    right: 0;
    top: 0;
}
#app-navigation .utils > * {
    float: right;
	margin: 6px 2px;
}
/*#app-navigation img.shared { float: right; opacity: 0.4; margin: 0 .5em; }
#app-navigation img.shared:hover { opacity: 1; }*/
#app-navigation li.editing .checked {
	margin: 10px 0 0 -27px;
	opacity: 1;
	display: inline-block;
	float: left;
	cursor: pointer;
	background-repeat: no-repeat;
	background-position: center;
	background-size:contain;
	width: 18px; height: 18px;
}
#app-navigation li.editing .checked.disabled { opacity: .5 }
#app-navigation input[type="text"] {
	display: block;
	width: 200px;
	float: left;
	margin: 5px 0 5px .3em;
}

#grouplist { z-index: 100; }
#grouplist .oc-addnew-init { padding: 0 16px; }
#grouplist .add-contact:before {
	content: '+';
	font-weight: bold;
	font-size: 180%;
}
#grouplist li .action:not(.starred):not(.checked):not(.favorite):not([class^="add-"]) { display: none; padding: 0; }
#grouplist li:not([data-type="shared"]):not(.editing):hover .action.numcontacts,
#grouplist li:not([data-type="shared"]):not(.editing) .active.action.numcontacts { display: inline-block; }
.action.numcontacts { width: 6em; }
#grouplist li.active[data-type="category"]:not(.editing):hover .action.delete { display: inline-block; width: 20px; height: 20px; }
#grouplist li.active[data-type="category"]:not(.editing):hover .action.edit { display: inline-block; width: 20px; height: 20px; }
/*#grouplist li:not(.editing) .action.delete { width: 20px; height: 20px; }*/
#grouplist .group span.numcontacts { width: 30px; text-align: right; margin-right: 10px !important; }
#grouplist li.special { line-height: 40px; }

/* First run */

#firstrun {
	height: 100%;
	margin-left: 300px;
	position: relative;
}

	#firstrun .message {
		color: #888888;
		font-size: 1.2em;
		font-weight: bold;
		text-shadow: 0 1px 0 #FFFFFF;
		position: absolute;
		top: 50%;
		text-align: center;
		width: 100%;
		margin-top: -3em;
		line-height: 1.8;
	}

	#firstrun button {
		line-height: 1.2;
		padding-left: 10px;
		padding-right: 10px;
	}

/*
#firstrun {
	position:absolute;
	left:50%; top:30%;
	width: 50%;
	transform:translate(-50%,-50%); -webkit-transform:translate(-50%,-50%);
	color:white; font-weight:bold; text-align: center; color: #777;
}
#firstrun li { font-size:1.5em; text-align: center; margin-bottom: 1em; }
#firstrun p { font-size:1.2em; text-align:center; }
#firstrun #selections { font-size:0.8em; margin: 2em auto auto auto; clear: both; }
*/
#contact { margin: 1em; }
#contact textarea { min-height: 5em; width: 100%; margin: 0 !important; padding: 0 !important; outline: 0 !important;}
#contact footer {
	padding: 5px;
	width: 100%;
	-moz-box-sizing: border-box; box-sizing: border-box;
	clear: both;
	white-space: nowrap;
}
#contact footer > * {
	display: inline-block;
	float: left;
}
#contact footer > .delete {
	display: inline-block;
	float: right;
}

#contact input[type="checkbox"] { margin: 3px; padding:1px; vertical-align: bottom; float: left; }
/*dl.form { display: block; width: auto; margin: 0; padding: 0; cursor: normal; }*/
.form dt { display: inline-block; clear: left; float: left; width: 7em; margin: 0; padding: 0.8em 0.5em 0 0; text-align:right; text-overflow:ellipsis; o-text-overflow: ellipsis; vertical-align: text-bottom; color: #bbb;/* white-space: pre-wrap; white-space: -moz-pre-wrap !important; white-space: -pre-wrap; white-space: -o-pre-wrap;*/ }
.form dd { display: inline-block; clear: right; float: left; margin: 0; padding: 0; white-space: nowrap; vertical-align: text-bottom; }

/* override the default margin on share dropdown */
#dropdown {
	margin: 0;
	-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;
	width: 100%;
}
#dropdown label { display: list-item; }
#dropdown input[type="text"] { width: 90%; }
/* reset box-sizing for multiSelect */
#content div.multiselect, #content div.multiselect > * { -webkit-box-sizing: content-box; -moz-box-sizing: content-box; box-sizing: content-box; }

/* Reset values for jquery.multiselect */
.ui-multiselect-checkboxes {
    overflow-y: auto;
	height: auto !important;
	max-height: 200px;
}
.ui-multiselect-checkboxes label {
	width: 100%; color: #333 !important; font-size: 100% !important;
	-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;
}
.ui-multiselect-checkboxes label > span {color: #333 !important; font-size: 100% !important; }
.ui-multiselect-checkboxes input[type="checkbox"] { margin: 3px !important; }
button.ui-multiselect { height: 25px; } /* No idea why this is needed? */

#content .multiselectoptions > li > * { 
	-webkit-box-sizing: content-box; -moz-box-sizing: content-box; box-sizing: content-box; 
	color: #888888; 
	display: block;
	margin: 0; padding: .2em;
}
/* ... */

